#cargo-features = ["edition2021"]

[package]
name = "json"
version = "0.2.3"
# 0.2.2 fixed bug on fixed issue with diagnostic: 'removal index (is 0) should be < len (is 0)', /home/red/abc/src/rust/json/src/lib.rs:367:71
# 0.2.2 fixed issue with diagnostic: 'removal index (is 0) should be < len (is 0)', /home/red/abc/src/rust/json/src/lib.rs:367:71
# 0.2.1 fixed bug in 'fn Json::get()'
# 0.2.0 did add 'fn Json::go(..)' same as 'fn Json::get(..)' but inplace
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# thiserror = "1.0"
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
log = "0.4"
# chrono = "0.4.11"
# ids = { path = "../ids" }
# pretty_assertions = "0.6.1"
# tokio = { version = "0.2", features = ["fs"] }

tokio = { version = "1", features = ["fs"] }
# paste = "0.1"
paste = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test_helper = { path = "../test_helper" }
pretty_assertions = "1"
lazy_static = "1.4.0"
regex = "1.3.9"


