#cargo-features = ["edition2021"]

[package]
name = "mls_facet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
common_macros2 = { path = "../common_macros2" }
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
